Settings page fixed, dark mode persisting

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body,
 	width: 100%;
 	height: 100%;
 	transition: all 0.25s;
-	background-color: #a8e5ff;
+	/* background-color: #a8e5ff; */
 }
 
 h1 {
@@ -84,4 +84,8 @@ h1 {
 .center-content {
 	display: flex;
 	justify-content: center;
+}
+
+.capitalize {
+	text-transform: capitalize;
 }
